# DigitalFish

./: .gitignore  =4.60  README.md  pyproject.toml  requirements.txt
digital_ichthyologist/: __init__.py  analyzer.py  cli.py  extractor.py  fish.py  reporter.py  similarity.py  tui.py  vita.py
digital_ichthyologist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analyzer.py  test_extractor.py  test_fish.py  test_reporter.py  test_similarity.py  test_tui.py  test_vita.py
