[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-ichthyologist"
version = "0.1.0"
description = "Evolutionary Code Analyst – track code organisms through Git history"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "pydriller>=2.5",
    "rapidfuzz>=3.0",
    "pandas>=2.0",
    "tqdm>=4.60",
]

[project.scripts]
digital-ichthyologist = "digital_ichthyologist.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["digital_ichthyologist*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
